internal/octogo/testdata/14_constants.ogo
// COMPILE

const (
    a = 1
    b = a + 2
    c = b * 3
)

func testConstants() {
    // ERROR "undefined: d|undeclared name"
    const x = d + 1

    var runtimeVal int = 10
    // ERROR "is not a constant|initializer must be constant"
    const y = runtimeVal
}
